--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "p_browser_playground",
+  "name": "@iskl/browser_playground",
   "version": "0.1.0",
   "private": true,
   "scripts": {
